feat: survey context field, order adjustments, category stats, and UI sorting
- Add context field to survey questions for multi-page survey support
- Add findByContext, findByCategoryIdAndContext repository methods
- Add getAgenciesByCategory endpoint + service method
- Add source field to AgencyCategorySelection
- Add categoryId to SurveyAnswer entity and DTO
- Update SurveyAnswerStats to group by categoryId
- Add createdAt to UserDTO
- Add adjustedPrice, desiredDeliveryDate to Order entities
- Add customer status validation on order confirmation
- Sort frontend lists by createdAt desc
- Add Select All + context field to survey question form
- Replace Badge type 'default' with 'info'
- Mobile: survey modal, checkout/order/profile updates